--- a/react-io-namespace-example/client/src/App.css
+++ b/react-io-namespace-example/client/src/App.css
@@ -1,38 +1,34 @@
-.App {
-  text-align: center;
+.text-wrap {
+	height: 100vh;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	gap: 10px;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.active {
+	color: green;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.deactive {
+	color: red;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.btn-box {
+	display: flex;
+	flex-direction: row;
+	gap: 5px;
 }
-
-.App-link {
-  color: #61dafb;
+.active-btn {
+	border: 0;
+	padding: 10px;
+	border-radius: 5px;
+	background-color: #00d8ff;
+	cursor: pointer;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.deactive-btn {
+	border: 0;
+	padding: 10px;
+	border-radius: 5px;
+	background-color: red;
+	color: #fff;
+	cursor: pointer;
 }
